--- a/index.html
+++ b/index.html
@@ -35,16 +35,14 @@
 					</ul>
 				</div>
 
-				<div id="newsletter">
-					<form class="my-form" action="" method="POST">
-						<input type="email" name="" placeholder="Get updates and news! Enter your email address" target = "_blank">
-					</form>
-				</div>	
+				<form id="my-form" action="" method="POST">
+					<input type="email" name="" placeholder="Get updates and news! Enter your email here" target = "_blank">
+				</form>
 
 			</div>
 
 
-			<img src="Media/lilyMoon.jpg">
+			<img class = "imageLeft" src = "Media/lilyMoon.jpg" height="345" width="200">
 
 			<footer>
 				<p>Copyright &copy; 2020, Bridget Alexandra</p>
