--- a/about.html
+++ b/about.html
@@ -1,20 +1,50 @@
 <!DOCTYPE html>
 <html>
+
 	<head>
-		<meta name="keywords" content="Author, Writer, Young Adult Author, Young Adult, Fiction, writing, publishing, YA, teen, teens, Bridget Mansour, Bridget, Mansour, Archangels, A Date With Death, romance, fantasy author, angels, death, YA Author">
+		<meta name="description" content="Bridget Alexandra's author website">
+		<meta name="keywords" content="Author, Writer, Young Adult Author, Young Adult, Fiction, writing, publishing, YA, teen, teens, Bridget Mansour, Bridget Alexandra, Bridget, Alexandra, Mansour, Archangels, A Date With Death, romance, fantasy author, magic, angels, demons, death, YA Author">
 		<title> Bridget Alexandra </title>
-		<link rel="stylesheet" type="text/css" href="main.css"/>
+		<link rel="stylesheet" type="text/css" href="about.css"/>
 	</head>
+
 	<body>
-		<div class="header">
-			<h1>BRIDGET <br> ALEXANDRA</h1>
-		</div>
-		<div id="navigation">
-			<li><a href="/home">home</a></li>
-			<li><a href="/books">books</a></li>
-			<li><a href="/contact">contact</a></li>
-		</div>
-		<div class="./Media/lilyMoon.jpg" alt="description" width="400" height="650" />
-		</div>
+
+		<div id="design">
+
+			<div class="header">
+				<h1>Bridget <br> Alexandra</h1>
+			</div>
+
+
+			<div class="container">
+
+				<nav class="navigation">
+					<ul>
+						<li><a href="about.html">About</a></li>
+						<li><a href="books.html">Books</a></li>
+						<li><a href="contact.html">Contact</a></li>	
+					</ul>	
+				</nav>
+
+				<div class = "social">
+					<ul>
+						<li><a href="https://www.instagram.com/bridgetmansour" target="_blank"><img src="Media/igLogo.png" height="25" width="25"></a></li>
+						<li><a href="https://twitter.com/BridgetMansour" target="_blank"><img src="Media/twitterLogo.png" height="25" width="25"></a></li>
+						<!-- <li><a href="#" target="_blank">youtube</a></li> -->
+					</ul>
+				</div>
+
+			</div>
+
+			<img class = "imageLeft" src = "Media/lilyMoon.jpg" height="345" width="200">
+
+			<footer>
+				<p>Copyright &copy; 2020, Bridget Alexandra</p>
+			</footer>
+
+			</div>
+
 	</body>
+
 </html>
