--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
 
 			<img class = "imageLeft" src = "Media/lilyMoon.jpg" height="345" width="200">
 
+			<img class = "imageRight" src = "Media/lilyMoon.jpg" height="345" width="200">
+
 			<footer>
 				<p>Copyright &copy; 2020, Bridget Alexandra</p>
 			</footer>
