--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<div id="design">
 
 			<div class="header">
-				<h1>Bridget <br> Alexandra</h1>
+				<a href="index.html"><h1>Bridget <br> Alexandra</h1></a>
 			</div>
 
 
