--- a/about.html
+++ b/about.html
@@ -4,6 +4,7 @@
 	<head>
 		<meta name="description" content="Bridget Alexandra's author website">
 		<meta name="keywords" content="Author, Writer, Young Adult Author, Young Adult, Fiction, writing, publishing, YA, teen, teens, Bridget Mansour, Bridget Alexandra, Bridget, Alexandra, Mansour, Archangels, A Date With Death, romance, fantasy author, magic, angels, demons, death, YA Author">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title> Bridget Alexandra </title>
 		<link rel="stylesheet" type="text/css" href="about.css"/>
 	</head>
@@ -13,7 +14,7 @@
 		<div id="design">
 
 			<div class="header">
-				<h1>Bridget <br> Alexandra</h1>
+				<a href="index.html"><h1>Bridget <br> Alexandra</h1></a>
 			</div>
 
 
