--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<div id="design">
 
 			<div class="header">
-				<a href="index.html"><h1>Bridget <br> Alexandra</h1></a>
+				<a href="index.html"><img src="Media/headerMain.jpg" scale="0"></a>
 			</div>
 
 
