--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
 		<div id="design">
 
-			<div class="header">
-				<a href="index.html"><img src="Media/headerMain.jpg"></a>
+			<div id="logo">
+				<a href="index.html"><img src="Media/headerMain.jpg" id="logo"></a>
 			</div>
 
 
@@ -40,7 +40,6 @@
 				</form>
 
 			</div>
-
 
 			<footer>
 				<p>Copyright &copy; 2020, Bridget Alexandra</p>
