--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<div id="design">
 
 			<div id="logo">
-				<a href="index.html"><img src="Media/headerMain.jpg" id="logo"></a>
+				<a href="index.html"><img src="Media/headerMain.jpg" alt="Bridget Alexandra Books" id="logo"></a>
 			</div>
 
 
