--- a/index.html
+++ b/index.html
@@ -12,12 +12,11 @@
 
 		<div id="design">
 
-			<div id="logo">
-				<a href="index.html"><img src="Media/headerMain.jpg" alt="Bridget Alexandra Books" id="logo"></a>
-			</div>
-
-
 			<div class="container">
+
+				<div class="logo">
+					<a href="index.html"><img src="Media/Bridget-Alexandra-Books-Main.png"></a>
+				</div>
 
 				<nav class="navigation">
 					<ul>
