--- a/about.html
+++ b/about.html
@@ -4,21 +4,19 @@
 	<head>
 		<meta name="description" content="Bridget Alexandra's author website">
 		<meta name="keywords" content="Author, Writer, Young Adult Author, Young Adult, Fiction, writing, publishing, YA, teen, teens, Bridget Mansour, Bridget Alexandra, Bridget, Alexandra, Mansour, Archangels, A Date With Death, romance, fantasy author, magic, angels, demons, death, YA Author">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title> Bridget Alexandra </title>
-		<link rel="stylesheet" type="text/css" href="about.css"/>
+		<link rel="stylesheet" type="text/css" href="home.css"/>
 	</head>
 
 	<body>
 
 		<div id="design">
 
-			<div class="header">
-				<a href="index.html"><h1>Bridget <br> Alexandra</h1></a>
-			</div>
-
-
 			<div class="container">
+
+				<div class="logo">
+					<a href="index.html"><img src="Media/Bridget-Alexandra-Alt.png"></a>
+				</div>
 
 				<nav class="navigation">
 					<ul>
@@ -36,11 +34,11 @@
 					</ul>
 				</div>
 
+				<form id="my-form" action="" method="POST">
+					<input type="email" name="" placeholder="Get updates and news! Enter your email here" target = "_blank">
+				</form>
+
 			</div>
-
-			<img class = "imageLeft" src = "Media/lilyMoon.jpg" height="345" width="200">
-
-			<img class = "imageRight" src = "Media/lilyMoon.jpg" height="345" width="200">
 
 			<footer>
 				<p>Copyright &copy; 2020, Bridget Alexandra</p>
