made about logo smaller

--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
 			<div class="container">
 
 				<div class="logo">
-					<a href="index.html"><img src="Media/Bridget-Alexandra-Alt.png"></a>
+					<a href="index.html"><img src="Media/Bridget-Alexandra-Alt.png"height="200" width="288"> </a>
 				</div>
 
 				<nav class="navigation">
