connect to database

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 					</ul>
 				</div>
 
-				<form id="my-form" action="" method="POST">
+				<form id="my-form" action="email.json" method="post">
 					<input type="email" name="" placeholder="Get updates and news! Enter your email here" target = "_blank">
 				</form>
 
