--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 	<head>
 		<meta name="description" content="Bridget Alexandra's author website">
-		<meta name="keywords" content="Author, Writer, Young Adult Author, Young Adult, Fiction, writing, publishing, YA, teen, teens, Bridget Mansour, Bridget Alexandra, Bridget, Alexandra, Mansour, Archangels, A Date With Death, romance, fantasy author, magic, angels, demons, death, YA Author">
+		<meta name="keywords" content="Author, Writer, Young Adult Author, Young Adult, Fiction, writing, publishing, YA, teen, teens, Bridget Mansour, Bridget Alexandra, Bridget, Alexandra, Mansour, Archangels, A Date With Death, romance, fantasy author, magic, angels, demons, death, Fated Mates, YA Author">
 		<title> Bridget Alexandra </title>
 		<link rel="stylesheet" type="text/css" href="home.css"/>
 	</head>
