--- a/index.html
+++ b/index.html
@@ -1,51 +1,59 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <meta name="description" content="Bridget Alexandra's author website">
+        <meta name="keywords" content="Author, Writer, Young Adult Author, Young Adult, Fiction, writing, publishing, YA, teen, teens, Bridget Mansour, Bridget Alexandra, Bridget, Alexandra, Mansour, Archangels, A Date With Death, romance, fantasy author, magic, angels, demons, death, Fated Mates, YA Author">
+        <title>Bridget Alexandra</title>
+        <link rel="stylesheet" type="text/css" href="home.css"/>
+    </head>
 
-	<head>
-		<meta name="description" content="Bridget Alexandra's author website">
-		<meta name="keywords" content="Author, Writer, Young Adult Author, Young Adult, Fiction, writing, publishing, YA, teen, teens, Bridget Mansour, Bridget Alexandra, Bridget, Alexandra, Mansour, Archangels, A Date With Death, romance, fantasy author, magic, angels, demons, death, Fated Mates, YA Author">
-		<title> Bridget Alexandra </title>
-		<link rel="stylesheet" type="text/css" href="home.css"/>
-	</head>
+    <body>
+        <header>
+            <div class="logo">
+                <a href="index.html">
+                    <img src="Media/Bridget-Alexandra-Books-Main.png" alt="Bridget Alexandra Logo">
+                </a>
+            </div>
 
-	<body>
+            <nav class="navigation">
+                <ul>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="books.html">Books</a></li>
+                    <li><a href="contact.html">Contact</a></li>    
+                </ul>    
+            </nav>
+        </header>
 
-		<div id="design">
+        <main>
+            <section id="newsletter">
+                <h2>Subscribe to my newsletter</h2>
+                <form id="my-form" action="" method="post">
+                    <input type="text" name="firstName" placeholder="First Name" required>
+                    <input type="text" name="lastName" placeholder="Last Name" required>
+                    <input type="email" name="email" placeholder="Email Address" required>
+                    <input type="submit" value="Subscribe">
+                </form>
+            </section>
+        </main>
 
-			<div class="container">
+        <aside class="social">
+            <ul>
+                <li>
+                    <a href="https://www.instagram.com/bridgetalexandra" target="_blank">
+                        <img src="Media/igLogo.png" height="25" width="25" alt="Instagram">
+                    </a>
+                </li>
+                <li>
+                    <a href="https://twitter.com/BridgetMansour" target="_blank">
+                        <img src="Media/twitterLogo.png" height="25" width="25" alt="Twitter">
+                    </a>
+                </li>
+                <!-- Additional social media links can be added here -->
+            </ul>
+        </aside>
 
-				<div class="logo">
-					<a href="index.html"><img src="Media/Bridget-Alexandra-Books-Main.png"></a>
-				</div>
-
-				<nav class="navigation">
-					<ul>
-						<li><a href="about.html">About</a></li>
-						<li><a href="books.html">Books</a></li>
-						<li><a href="contact.html">Contact</a></li>	
-					</ul>	
-				</nav>
-
-				<div class = "social">
-					<ul>
-						<li><a href="https://www.instagram.com/bridgetmansour" target="_blank"><img src="Media/igLogo.png" height="25" width="25"></a></li>
-						<li><a href="https://twitter.com/BridgetMansour" target="_blank"><img src="Media/twitterLogo.png" height="25" width="25"></a></li>
-						<!-- <li><a href="#" target="_blank">youtube</a></li> -->
-					</ul>
-				</div>
-
-				<form id="my-form" action="" method="post">
-					<input type="email" name="" placeholder="Get updates and news! Enter your email here" target = "_blank">
-				</form>
-
-			</div>
-
-			<footer>
-				<p>Copyright &copy; 2020, Bridget Alexandra</p>
-			</footer>
-
-			</div>
-
-	</body>
-
+        <footer>
+            <p>Copyright &copy; 2024, Bridget A Mansour</p>
+        </footer>
+    </body>
 </html>
