--- a/index.html
+++ b/index.html
@@ -27,10 +27,11 @@
         <main>
             <section id="newsletter">
                 <h2>Subscribe to my newsletter</h2>
+                <p>Sign up for news, giveaways, and more bookish goodness!</p>
                 <form id="my-form" action="" method="post">
                     <input type="text" name="firstName" placeholder="First Name" required>
                     <input type="text" name="lastName" placeholder="Last Name" required>
-                    <input type="email" name="email" placeholder="Email Address" required>
+                    <input type="email" name="email" placeholder="Email" required>
                     <input type="submit" value="Subscribe">
                 </form>
             </section>
