--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
         <main>
             <section id="newsletter">
                 <h2>Subscribe to my newsletter</h2>
-                <p>Sign up for news, giveaways, and more bookish goodness!</p>
+                <p>Sign up for the latest news, giveaways, and bookish suprises!</p>
                 <form id="my-form" action="" method="post">
                     <input type="text" name="firstName" placeholder="First Name" required>
                     <input type="text" name="lastName" placeholder="Last Name" required>
-                    <input type="email" name="email" placeholder="Email" required>
+                    <input type="email" name="email" placeholder="Email Address" required>
                     <input type="submit" value="Subscribe">
                 </form>
             </section>
@@ -49,12 +49,11 @@
                         <img src="Media/twitterLogo.png" height="25" width="25" alt="Twitter">
                     </a>
                 </li>
-                <!-- Additional social media links can be added here -->
             </ul>
         </aside>
 
         <footer>
-            <p>Copyright &copy; 2024, Bridget A Mansour</p>
+            <p>Copyright &copy; 2024, Bridget Mansour</p>
         </footer>
     </body>
 </html>
