--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <main>
             <section id="newsletter">
                 <h2>Subscribe to my newsletter</h2>
-                <p>Sign up for the latest news, giveaways, and more bookish suprises!</p>
+                <p>Get the latest news, exclusive giveaways, and more bookish suprises!</p>
                 <form id="my-form" action="" method="post">
                     <input type="text" name="firstName" placeholder="First Name" required>
                     <input type="text" name="lastName" placeholder="Last Name" required>
