--- a/about.html
+++ b/about.html
@@ -1,47 +1,46 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <meta name="description" content="Bridget Alexandra's author website">
+        <meta name="keywords" content="Author, Writer, Young Adult Author, Young Adult, Fiction, writing, publishing, YA, teen, teens, Bridget Mansour, Bridget Alexandra, Bridget, Alexandra, Mansour, Archangels, A Date With Death, romance, fantasy author, magic, angels, demons, death, YA Author">
+        <title>Bridget Alexandra</title>
+        <link rel="stylesheet" type="text/css" href="home.css"/>
+    </head>
+    <body>
+        <div id="design">
+            <div class="container">
+                <div class="logo">
+                    <a href="index.html"><img src="Media/Bridget-Alexandra-Alt.png" height="200" width="288"></a>
+                </div>
 
-	<head>
-		<meta name="description" content="Bridget Alexandra's author website">
-		<meta name="keywords" content="Author, Writer, Young Adult Author, Young Adult, Fiction, writing, publishing, YA, teen, teens, Bridget Mansour, Bridget Alexandra, Bridget, Alexandra, Mansour, Archangels, A Date With Death, romance, fantasy author, magic, angels, demons, death, YA Author">
-		<title> Bridget Alexandra </title>
-		<link rel="stylesheet" type="text/css" href="home.css"/>
-	</head>
+                <nav class="navigation">
+                    <ul>
+                        <li><a href="about.html">About</a></li>
+                        <li><a href="books.html">Books</a></li>
+                        <li><a href="contact.html">Contact</a></li> 
+                    </ul> 
+                </nav>
 
-	<body>
+                <div class="social">
+                    <ul>
+                        <li><a href="https://www.instagram.com/bridgetmansour" target="_blank"><img src="Media/igLogo.png" height="25" width="25"></a></li>
+                        <li><a href="https://twitter.com/BridgetMansour" target="_blank"><img src="Media/twitterLogo.png" height="25" width="25"></a></li>
+                        <!-- Additional social media links can be added here -->
+                    </ul>
+                </div>
 
-		<div id="design">
+                <!-- Author Bio Section -->
+                <section id="author-bio">
+                    <h2>About Bridget Alexandra</h2>
+                    <p>Bridget Alexandra is on an exciting journey with her debut novel, "A Date with Death." What blossomed as a college idea has flourished into a passion project, where each word is meticulously crafted, embodying her dedication to quality. Her aim is to make her first publication not just special, but a reflection of her best self.</p>
+                    <p>Away from the fictional world, Bridget works as a software engineer, where she brings stories to life through code. When she's not writing or coding, you'll find her lost in a book, catching some Z's, or daydreaming about the myriad hobbies she aspires to take up.</p>
+                    <p>Bridget is a firm believer in lifelong learning, a journey she finds both enriches her professional skills and nourishes her creativity. Her path demonstrates that knowledge and creativity are deeply intertwined, each constantly fueling and inspiring the other.</p>
+                </section>
+            </div>
 
-			<div class="container">
-
-				<div class="logo">
-					<a href="index.html"><img src="Media/Bridget-Alexandra-Alt.png"height="200" width="288"> </a>
-				</div>
-
-				<nav class="navigation">
-					<ul>
-						<li><a href="about.html">About</a></li>
-						<li><a href="books.html">Books</a></li>
-						<li><a href="contact.html">Contact</a></li>	
-					</ul>	
-				</nav>
-
-				<div class = "social">
-					<ul>
-						<li><a href="https://www.instagram.com/bridgetmansour" target="_blank"><img src="Media/igLogo.png" height="25" width="25"></a></li>
-						<li><a href="https://twitter.com/BridgetMansour" target="_blank"><img src="Media/twitterLogo.png" height="25" width="25"></a></li>
-						<!-- <li><a href="#" target="_blank">youtube</a></li> -->
-					</ul>
-				</div>
-
-			</div>
-
-			<footer>
-				<p>Copyright &copy; 2020, Bridget Alexandra</p>
-			</footer>
-
-			</div>
-
-	</body>
-
+            <footer>
+                <p>Copyright &copy; 2024, Bridget Mansour</p>
+            </footer>
+        </div>
+    </body>
 </html>
