--- a/about.html
+++ b/about.html
@@ -32,12 +32,12 @@
                 <!-- Bio and Image Container -->
                 <div class="bio-and-image">
                     <div class="bio-image">
-                        <img src="aboutMePic.png" alt="Bridget Alexandra" />
+                        <img src="Media/aboutMePic.png"/>
                     </div>
                     <section id="author-bio">
                         <h2>About Bridget Alexandra</h2>
-                        <p>Bridget Alexandra is on an exciting journey with her debut novel, "A Date with Death." What blossomed as a college idea has flourished into a passion project, where each word is meticulously crafted, embodying her dedication to quality. Her aim is to make her first publication not just special, but a reflection of her best self.<br></p>
-                        <p>Away from the fictional world, Bridget works as a software engineer, where she brings stories to life through code. When she's not writing or coding, you'll find her lost in a book, catching some Z's, or daydreaming about the myriad hobbies she aspires to take up.<br></p>
+                        <p>Bridget Alexandra is on an exciting journey with her debut novel, "A Date with Death." What blossomed as a college idea has flourished into a passion project, where each word is meticulously crafted, embodying her dedication to quality. Her aim is to make her first publication not just special, but a reflection of her best self.<br><br></p>
+                        <p>Away from the fictional world, Bridget works as a software engineer, where she brings stories to life through code. When she's not writing or coding, you'll find her lost in a book, catching some Z's, or daydreaming about the myriad hobbies she aspires to take up.<br><br></p>
                         <p>Bridget is a firm believer in lifelong learning, a journey she finds both enriches her professional skills and nourishes her creativity. Her path demonstrates that knowledge and creativity are deeply intertwined, each constantly fueling and inspiring the other.</p>
                     </section>
                 </div>
